--- a/.github/workflows/episode-unit-tests.yml
+++ b/.github/workflows/episode-unit-tests.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: macos-15
     timeout-minutes: 30
     env:
-      PHASE2_MODE: report-only
+      PHASE2_MODE: enforce-changed-files
       PHASE2_OVERALL_LOGIC_THRESHOLD: "85.00"
       PHASE2_CHANGED_FILES_THRESHOLD: "80.00"
 
