ci: pin test destination to iPhone 16 on iOS 18.5

--- a/.github/workflows/episode-unit-tests.yml
+++ b/.github/workflows/episode-unit-tests.yml
@@ -27,101 +27,13 @@ jobs:
       - name: Show Xcode Version
         run: xcodebuild -version
 
-      - name: Ensure iOS Simulator Exists
-        run: |
-          set -euo pipefail
-          AVAILABLE_DEVICES="$(xcrun simctl list devices available)"
-          if echo "$AVAILABLE_DEVICES" | grep -Eq '^[[:space:]]*iPhone '; then
-            echo "iPhone simulator already exists on runner."
-            exit 0
-          fi
-
-          RUNTIME_ID="$(xcrun simctl list runtimes available | grep -o 'com\.apple\.CoreSimulator\.SimRuntime\.iOS-[0-9-]*' | tail -n 1 || true)"
-          if [ -z "$RUNTIME_ID" ]; then
-            echo "::error::No available iOS runtime found."
-            xcrun simctl list runtimes available
-            exit 1
-          fi
-
-          DEVICE_INFO="$(xcrun simctl list devicetypes | awk '
-            {
-              line=$0
-              sub(/^[[:space:]]*/, "", line)
-              if (line !~ /^iPhone /) next
-              if (tolower(line) ~ /unavailable/) next
-
-              id=line
-              sub(/^.*\((com\.apple\.CoreSimulator\.SimDeviceType\.[^)]+)\).*$/, "\\1", id)
-              if (id !~ /^com\.apple\.CoreSimulator\.SimDeviceType\./) next
-
-              name=line
-              sub(/[[:space:]]+\(com\.apple\.CoreSimulator\.SimDeviceType\.[^)]+\).*$/, "", name)
-
-              gen=0
-              if (match(name, /iPhone[[:space:]]+[0-9]+/)) {
-                token=substr(name, RSTART, RLENGTH)
-                sub(/^iPhone[[:space:]]+/, "", token)
-                gen=token+0
-              }
-
-              if (best_id == "" || gen > best_gen) {
-                best_gen=gen
-                best_name=name
-                best_id=id
-              }
-            }
-            END {
-              if (best_id != "") print best_name "|" best_id
-            }
-          ')"
-
-          DEVICE_NAME="${DEVICE_INFO%%|*}"
-          DEVICE_TYPE_ID="${DEVICE_INFO#*|}"
-
-          if [ -z "$DEVICE_TYPE_ID" ]; then
-            echo "::error::No iPhone device type found."
-            xcrun simctl list devicetypes
-            exit 1
-          fi
-
-          CREATED_NAME="$DEVICE_NAME"
-          UUID="$(xcrun simctl create "$CREATED_NAME" "$DEVICE_TYPE_ID" "$RUNTIME_ID" 2>/dev/null || true)"
-          if [ -z "$UUID" ]; then
-            CREATED_NAME="CI ${DEVICE_NAME} ${GITHUB_RUN_ID}"
-            UUID="$(xcrun simctl create "$CREATED_NAME" "$DEVICE_TYPE_ID" "$RUNTIME_ID")"
-          fi
-
-          xcrun simctl boot "$UUID" || true
-          echo "CI_SIMULATOR=$CREATED_NAME" >> "$GITHUB_ENV"
-          echo "Created iOS simulator: $CREATED_NAME ($UUID)"
-
-      - name: Select iOS Simulator
-        run: |
-          set -euo pipefail
-          if [ -n "${CI_SIMULATOR:-}" ]; then
-            echo "Using preselected simulator: $CI_SIMULATOR"
-            exit 0
-          fi
-
-          AVAILABLE_DEVICES="$(xcrun simctl list devices available)"
-          SIM_NAME="$(echo "$AVAILABLE_DEVICES" | sed -nE 's/^[[:space:]]*(iPhone.*)[[:space:]]+\([0-9A-Fa-f-]+\)[[:space:]]+\([^)]*\)$/\1/p' | head -n 1)"
-
-          if [ -z "$SIM_NAME" ]; then
-            echo "::error::No iPhone simulator found on runner."
-            echo "$AVAILABLE_DEVICES"
-            exit 1
-          fi
-
-          echo "CI_SIMULATOR=$SIM_NAME" >> "$GITHUB_ENV"
-          echo "Using simulator: $SIM_NAME"
-
-      - name: Run EpisodeStockerTests
+      - name: Build and test
         run: |
           mkdir -p artifacts
           xcodebuild test \
             -project EpisodeStocker.xcodeproj \
             -scheme EpisodeStocker \
-            -destination "platform=iOS Simulator,name=${CI_SIMULATOR},OS=latest" \
+            -destination 'platform=iOS Simulator,name=iPhone 16,OS=18.5' \
             -parallel-testing-enabled NO \
             -maximum-parallel-testing-workers 1 \
             -only-testing:EpisodeStockerTests \
