--- a/.github/workflows/episode-unit-tests.yml
+++ b/.github/workflows/episode-unit-tests.yml
@@ -27,13 +27,13 @@ jobs:
       - name: Show Xcode Version
         run: xcodebuild -version
 
-      - name: Run EpisodeStockerTests
+      - name: Build and test
         run: |
           mkdir -p artifacts
           xcodebuild test \
             -project EpisodeStocker.xcodeproj \
             -scheme EpisodeStocker \
-            -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' \
+            -destination 'platform=iOS Simulator,name=iPhone 16,OS=18.5' \
             -parallel-testing-enabled NO \
             -maximum-parallel-testing-workers 1 \
             -only-testing:EpisodeStockerTests \
